[package]
name = "encrypted-notes"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = "0.3"                                     # Web framework
tokio = { version = "1", features = ["full"] }   # Async runtime
serde = { version = "1", features = ["derive"] } # Serialization
serde_json = "1"
sled = "0.34"                                    # Embedded database for storing encrypted notes
ring = "0.16"                                    # Cryptography (AES encryption)
base64 = "0.13"                                  # Encoding binary data
rand = "0.8"                                     # Random token generation
